# kutter_api

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example.env
.cargo/: config.toml
app/: Cargo.toml
app/src/: main.rs
app/src/config/: application_config.rs
docs/en/: README.md
docs/pt-BR/: README.md
domain/: Cargo.toml
domain/src/: lib.rs  services.rs  services_impl.rs
infra/: Cargo.toml
persistance/: Cargo.toml
persistence/: Cargo.toml
persistence/src/: lib.rs
persistence/src/adapters/: connection_impl.rs  mod.rs
persistence/src/adapters/repositories/: banned_word_repository_impl.rs  channel_repository_impl.rs  community_repository_impl.rs  friend_repository_impl.rs  member_repository_impl.rs  message_repository_impl.rs  mod.rs  token_repository_impl.rs  user_flag_repository_impl.rs  user_repository_impl.rs
persistence/src/database/: connection.rs  mod.rs  schema.rs  types.rs  types_impl.rs
persistence/src/entity/: chat_message_impl.rs  friend_impl.rs  mod.rs  models.rs  user.rs  user_impl.rs
persistence/src/mappers/: banned_word_mapper.rs  channel_mapper.rs  community_mapper.rs  member_mapper.rs  message_mapper.rs  mod.rs  user_flag_mapper.rs  user_mapper.rs
persistence/src/models/: banned_word_model.rs  channel_model.rs  community_model.rs  friend_model.rs  member_model.rs  message_model.rs  mod.rs  token_model.rs  user_flag_model.rs  user_model.rs
security/: Cargo.toml
security/src/: lib.rs
security/src/jwt/: claims_type.rs  mod.rs  token_service.rs
security/src/keys/: mod.rs  public_key_service.rs
security/src/password/: hash_service.rs
web/: Cargo.toml
web/src/: lib.rs  server.rs
web/src/dto/request/: channel_request_dto.rs  community_request_dto.rs  message_request_dto.rs  mod.rs  types.rs  user_request_dto.rs
web/src/dto/response/: channel_response_dto.rs  community_response_dto.rs  message_response_dto.rs  mod.rs  types.rs
web/src/handlers/: channel_handler.rs  community_handler.rs  message_handler.rs  mod.rs  request_body.rs  user_handler.rs
web/src/http/: mod.rs  server.rs
web/src/mappers/: mod.rs
(+77 files in other folders)
