[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", version = "0.1.0" }
domain = { path = "../domain", version = "0.1.0" }

async-trait = "0.1.89"
sqlx = { version = "0.8.6", default-features = false, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "macros"
]}