[package]
name = "security"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", version = "0.1.0" }
domain = { path = "../domain", version = "0.1.0" }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["rust_crypto"] }
bcrypt = "0.18.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
x25519-dalek = "2.0.1"