[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", version = "0.1.0" }
domain = { path = "../domain", version = "0.1.0" }
security = { path = "../security", version = "0.1.0" }

actix-web = { version = "4.12.1", default-features = false, features = ["macros"] }
actix-files = "0.6.9"